# Simple-License-Manager

./: CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp  slm.hpp
